--- a/fly.toml
+++ b/fly.toml
@@ -16,7 +16,8 @@ GITEA__server__ROOT_URL="https://code.rollen.io"
 GITEA__server__LANDING_PAGE="explore"
 GITEA__security__INSTALL_LOCK="true" # Don't show installer
 GITEA__service__DISABLE_REGISTRATION="true" # TODO: uncomment once you have created your first user
-GITEA__ui__THEMES="gitea,arc-green,nord"
+GITEA__ui__DEFAULT_THEME="nord"
+GITEA__ui__THEMES="auto,gitea,arc-green,nord"
 
 # persist data
 [[mounts]]
